<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Files Pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="Enter">确定</string>
    <string name="Cancel">取消</string>
    
    <string name="help">帮助</string>
    <string name="about">关于</string>
    
    <string name="Preinstall">预设</string>
    <string name="User_defined">自定义</string>
    <string name="RenameFolders">重命名文件夹</string>
    <string name="RenameFiles">重命名文件</string>
    <string name="RenameAll">对所有项目进行处理</string>
    
    <string name="Please_input_file_number">文件序号</string>
    <string name="Please_input_file_separator">分隔符</string>
    <string name="Please_input_file_name">文件名</string>
    
    <string name="FileName">文件名</string>

</resources>
