<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#222222"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/selector_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/framework_background" >

        <RadioGroup
            android:id="@+id/RadioGrup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/RadioButtonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Preinstall"
                android:textSize="16sp"
                android:textColor="#9f9f9f" />

            <RadioButton
                android:id="@+id/RadioButtonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:text="@string/User_defined"
                android:textSize="16sp"
                android:textColor="#9f9f9f" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/preinstall_selector_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dip" >
            
            <Spinner
                android:id="@+id/nameSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_weight="1.5"
                android:textSize="16sp"
                android:textColor="#9f9f9f"
               	android:background="@drawable/spinner_textview_selector" />

            <Spinner
                android:id="@+id/separatorSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_weight="1.6"
                android:layout_marginLeft="5dip"
                android:textSize="16sp"
                android:textColor="#9f9f9f"
                android:background="@drawable/spinner_textview_selector" />
            
            <Spinner
                android:id="@+id/numberSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dip"
                android:textSize="16sp"
                android:textColor="#9f9f9f"
                android:background="@drawable/spinner_textview_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_defined_selector_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RadioGrup01" >

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:background="@drawable/edittext_selector"
                android:hint="@string/Please_input_file_name"
                android:textSize="16sp"
                android:textColor="#9f9f9f" />
            
            <EditText
                android:id="@+id/separatorEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:background="@drawable/edittext_selector"
                android:hint="@string/Please_input_file_separator"
                android:textSize="16sp"
                android:textColor="#9f9f9f" />

            <EditText
                android:id="@+id/numEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dip"
                android:layout_weight="1.3"
                android:layout_marginLeft="5dip"
                android:digits="1234567890"
                android:singleLine="true"
                android:background="@drawable/edittext_selector"
                android:hint="@string/Please_input_file_number"
                android:textSize="16sp"
                android:textColor="#9f9f9f" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/selector_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/framework_background"
        android:layout_marginTop="5dip"
        android:layout_below="@id/selector_layout1" >

        <RadioGroup
            android:id="@+id/RadioGrup02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <RadioButton
                android:id="@+id/RadioButtonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="#2d58a3"
                android:text="@string/RenameFiles" />
            
            <RadioButton
                android:id="@+id/RadioButtonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2d58a3"
                android:text="@string/RenameFolders" />

            <RadioButton
                android:id="@+id/RadioButtonFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="#2d58a3"
                android:text="@string/RenameAll" />
        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>